
2003-06-03	Joel Becker <joel.becker@oracle.com>

	* include/asm-i386/osmcompat32.h: Renamed from bad osmids.h
		name.
	* kernel/osm.c: osmcompat32.h
	* libosm/osmlib.c: osmcompat32.h
	* kernel/Makefile: Added header deps for osm.o.
	* libosm/Makefile: osmcompat32.h

2003-05-30	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmkernel.h: Remove request_key_osm_ioc.
	* kernel/osm.c: Remove request_key_osm_ioc.
	* libosm/osmlib.c: Removed stupid debug printf.
	
2003-05-29	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmabi.h: Add gi_version.
	* kernel/osm.c: Handle gi_version.
	* libosm/osmlib.c: Handle gi_version.
	* test/Makefile: Link libosm in, duh.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Makefile: Added include subdir.
	* Preamble.make: Added ALL_RULES.
	* Postamble.make: Added ALL_RULES and fixed CLEAN_FILES.
	* include/Makefile: Added.
	* include/asm-i386/Makefile: Added.
	* include/linux/Makefile: Added.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Config.make.in: Added GCCINC back.
	* Makefile: fixed 'test' subdir.
	* configure.in: Added GCCINC back.
	* kernel/Makefile: Added.
	* kernel/osm.c: Fixed a prototype.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Preamble.make: Added.
	* Postamble.make: Added.
	* Makefile: Added.
	* libosm/Makefile: Added.
	* tools/Makefile: Added.
	* test/Makefile: Added.
	* test/osmtest.c: Change include <> to "" and OSMLIB_MAJOR, etc
		to VERSION.
	* test/osmtest-multi.c: Change include <> to "" and
		OSMLIB_MAJOR, etc to VERSION.
	* libosm/osmlib.c: Change OSMLIB_MAJOR, etc to VERSION
	* tools/osmtool.c: Change include <> to "" and OSMLIB_MAJOR,
		etc to VERSION.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Makefile.orig: Moved Makefile out of the way.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* config.guess: Start of conversion to makebo.
	* config.sub: Start of conversion to makebo.
	* configure.in: Start of conversion to makebo.