@@ -30,7 +30,6 @@
 #include <linux/types.h>
 #include "oratypes.h"
 #include "osmlib.h"
-#include "linux/osmabi.h"
 #include "linux/osmdisk.h"
 
 
