@@ -1,4 +1,15 @@
 
+2003-06-04	Joel Becker <joel.becker@oracle.com>
+
+	* Config.make.in: Added DEFS autoconf variable.
+	* configure.in: Added call to AC_CHECK_SIZEOF.
+	* include/asm-i386/osmcompat32.h: Added BITS_PER_LONG detection.
+	* include/linux/osmabi.h: IODISK32 and IODISK64.
+	* kernel/osm.c: IODISK32 and IODISK64.
+	* libosm/Makefile: Add $(DEFS) to CPPFLAGS.
+	* tools/Makefile: Add $(DEFS) to CPPFLAGS.
+	* tools/osmtool.c: Remove #include of osmabi.h.
+
 2003-06-03	Joel Becker <joel.becker@oracle.com>
 
 	* include/asm-i386/osmcompat32.h: Renamed from bad osmids.h
